@startuml
'https://plantuml.com/sequence-diagram

scale 500 width
scale 500 height
[*] --> IN_WHITESPACE
READING --> [*] : c == '\0' & add to output
READING --> FIRST_DOUBLE_QUOTE : c == '"'
READING --> READING : else
READING --> DELIMITER : c == 'DELIMITER'
READING_AFTER_DOUBLE_QUOTE --> [*] : c == '\0' -> throw Illegal Argument-Exception
READING_AFTER_DOUBLE_QUOTE --> FIRST_DOUBLE_QUOTE : c == '"'
READING_AFTER_DOUBLE_QUOTE --> READING_AFTER_DOUBLE_QUOTE : else
READING_AFTER_DOUBLE_QUOTE --> [*] : c == 'DELIMITER' -> throw Illegal Argument-Exception
DELIMITER --> FIRST_DOUBLE_QUOTE : c == '"'
DELIMITER --> READING : else
DELIMITER --> DELIMITER : c == 'DELIMITER'
DELIMITER --> IN_WHITESPACE : c == ' '
DELIMITER --> [*] : c == '\0' & add blank to output
IN_WHITESPACE --> FIRST_DOUBLE_QUOTE : c == '"
IN_WHITESPACE --> READING : else
IN_WHITESPACE --> DELIMITER : c == 'DELIMITER'
IN_WHITESPACE --> [*] : c == '\0' & add blank to output
IN_WHITESPACE --> IN_WHITESPACE : c == ' '
FIRST_DOUBLE_QUOTE --> READING : c == '"'
FIRST_DOUBLE_QUOTE --> IN_DOUBLE_QUOTE : else
FIRST_DOUBLE_QUOTE --> [*] : c == '\0' -> throw Illegal Argument-Exception
IN_DOUBLE_QUOTE --> IN_DOUBLE_QUOTE : else
IN_DOUBLE_QUOTE --> READING : c == '"'
IN_DOUBLE_QUOTE --> [*] : c == '\0' -> throw Illegal Argument-Exception
AFTER_DOUBLE_QUOTE --> READING_AFTER_DOUBLE_QUOTE : else



@enduml